k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: journal-app
  labels:
    name: journal-app
spec:
  ports:
  - port: 80
    name: http
  selector:
    name: journal-app
