k8s-manifest/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: journal-app
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /
  # cambiar 20.72.99.142 por el IP de tu Ingress 
spec:
  ingressClassName: nginx
  rules:
  - host: journal-app-dev.20.81.4.59.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: journal-app
            port:
              number: 80
